views/popup/popup.css
body {
    max-width: 1000px;
    font-size: 14px;
    /* font-family: "Arabic Typesetting"; */
}


button {
    width: 80px;
    height: 20px;
    font-size: 12px;
}

section {
    display: block;
    width: 300px;
    position: relative;
    text-align: center;
    margin: 0 auto;
    padding-top: 5px;
    padding-bottom: 5px;
    border-bottom: 1px solid #ccc;
    clear: both;
}

ul {
    padding: 0;
}

a, a:visited {
    color: rgb(0, 119, 204);
    font-size: 12px;
    text-decoration: none;
}

a:hover {
    /*color: #27a201;*/
    font-weight: bold;
}

.club-information-container span {
    display: block;
}

.club-name-container {
    position: relative;
    display: inline-block;
    margin: 0 auto;
    vertical-align: top;
}

.club-position-container {
    position: relative;
    display: inline-block;
    margin: 0 auto;
    vertical-align: top;
}

/* .nearest-fixtures-container {
					position: relative;
			float: left;
			margin: 0 auto;
		} */

.club-name-container {
    width: 140px;
}

.club-position-container {
    width: 100px;
}

.club-position {
    display: block;
    text-align: center;
    vertical-align: middle;
    font-size: 56px;
    color: green;
    margin-top: 7px;
}

.links-list, .links-list-item {
    display: block;
}

.links-list {
    margin: 0 auto;
}

.nearest-fixtures-container, .league-snippet-container, .links-container {
    clear: both;
}

.unobtrusive-header {
    position: relative;
    text-align: center;
    margin: 0 auto;
    font-size: 12px;
    opacity: 0.5;
}

.club-name {
    margin: 5px 0 5px 0;
    font-weight: bold;
}

table {
    font-weight: normal;
}

td {
    text-align: left;
}

.win {
    color: #7ca541;
}

.loss {
    color: #d51d2a;
}

.report-match-container {
    display: block;
    text-align: center;
}

    .report-match-container img {
        margin-bottom: -2px;
    }

.contact-manager-link {
    display: block;
    background: url(images/envelope.svg) 0 no-repeat;
    background-size: contain;
    width: 30px;
    height: 25px;
}

.fixture-number {
    width: 30px;
    font-size: 13px;
}

table {
    padding: 0 9px;
    border-spacing: 0;
}

.nearest-fixtures-table td {
    padding: 3px;
}

.fixture-opponent-name {
    width: 135px;
}

.fixture-number-cell {
    border-right: 1px solid #cccccc;
}

.fixture-result-container {
    text-align: center;
    font-weight: 700;
}

.home-away {
    text-align: center;
    /*padding: 0px 2px;*/
}

.my-club-name {
    font-weight: bold;
}

table img {
    /*width: 14px !important;
    height: 14px !important;*/
    vertical-align: bottom;
}

.tournament-table td {
    padding: 2px;
}

.tournament-table span {
    display: inline-block;
}

.table-position {
    padding-right: 5px;
}

.table-club-name {
    margin-left: 3px;
}

.table-games-cell {
    border-right: 1px solid #cccccc;
}

.table-club-name {
    width: 153px;
}

.tournament-table .table-games {
    padding-right: 5px;
}

.tournament-table .table-points {
    padding-left: 5px;
}

.highlighted-team {
    font-weight: bold;
    color: rgb(17, 57, 210);
}

label {
    display: block;
}

